// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthorityReady /> should match snapshot 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Certificate Authority
    </h2>
    <p>
      Your certificate authority (CA) is set up properly. Please note that if you delete it, all clients will have their access revoked.
    </p>
    <div
      class="text-right"
    >
      <button
        class="btn btn-danger col-sm-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
        type="button"
      >
        <span>
          Delete CA
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<AuthorityReady /> should prevent deletion when server is enabled 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Certificate Authority
    </h2>
    <p>
      You can't delete the CA while the OpenVPN server is enabled. To delete the CA, you need to disable the server configuration first.
    </p>
    <div
      class="text-right"
    >
      <button
        class="btn btn-danger col-sm-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
        disabled=""
        type="button"
      >
        <span>
          Delete CA
        </span>
      </button>
    </div>
  </div>
</div>
`;
